# DistX

./: .dockerignore  .gitignore  Cargo.toml  DOCKER_DEPLOY.md  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE_NOTES.md  RELEASING.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: benchmark.rs  intensive_benchmark.rs
documentation/: API.md  ARCHITECTURE.md  COMPARISON.md  DOCKER.md  PERFORMANCE.md  PERSISTENCE.md  QUICK_START.md  RUST_COMMUNITY_POST.md  SIMILARITY_DEMO.md  SIMILARITY_ENGINE.md
examples/data-chatbot/: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
examples/data-chatbot/app/: layout.tsx
examples/data-chatbot/app/(chat)/: actions.ts
examples/data-chatbot/app/(chat)/api/chat/: route.ts  schema.ts
examples/data-chatbot/app/(chat)/api/chat/[id]/stream/: route.ts
examples/data-chatbot/app/(chat)/api/document/: route.ts
examples/data-chatbot/app/(chat)/api/files/data/: route.ts
examples/data-chatbot/app/(chat)/api/files/documents/: route.ts
examples/data-chatbot/app/(chat)/api/files/upload/: route.ts
examples/data-chatbot/app/(chat)/api/history/: route.ts
examples/data-chatbot/app/(chat)/api/suggestions/: route.ts
examples/data-chatbot/app/(chat)/api/vote/: route.ts
examples/data-chatbot/app/(chat)/chat/[id]/: page.tsx
examples/data-chatbot/artifacts/: actions.ts
examples/data-chatbot/artifacts/text/: client.tsx
examples/data-chatbot/components/: app-sidebar.tsx  artifact-messages.tsx  artifact.tsx  chat-files-dialog.tsx  chat-header.tsx  chat.tsx  code-editor.tsx  collection-info-dialog.tsx  collections-list.tsx  create-artifact.tsx  data-stream-handler.tsx  data-upload.tsx  document-preview.tsx  document-upload.tsx  greeting.tsx  icons.tsx  message-actions.tsx  message-editor.tsx  message.tsx  messages.tsx  multimodal-input.tsx  sidebar-history-item.tsx  sidebar-history.tsx  suggested-actions.tsx  text-editor.tsx  unified-upload.tsx  version-footer.tsx
examples/data-chatbot/hooks/: use-chat-visibility.ts
examples/data-chatbot/lib/: types.ts  utils.ts
examples/data-chatbot/lib/ai/: entitlements.ts  prompts.ts  providers.ts
examples/data-chatbot/lib/ai/tools/: find-similar.ts  import-data.ts  request-suggestions.ts  update-document.ts  vector-search.ts
examples/data-chatbot/lib/artifacts/: server.ts
examples/data-chatbot/lib/db/: queries-stub.ts
examples/data-chatbot/lib/distx/: client.ts  embeddings.ts  index.ts  schema-inference.ts  types.ts
examples/data-chatbot/lib/editor/: suggestions.tsx
examples/data-chatbot/lib/storage/: chats.ts  user-id.ts
examples/data-chatbot/lib/types/: db.ts
examples/data-chatbot/lib/vectx/: client.ts  document-parser.ts  embeddings.ts  index.ts  schema-inference.ts  types.ts
examples/data-chatbot/pdf-parser-service/: main.py  requirements.txt
examples/fastest-rag-stack/: .env.example  .gitignore  README.md  app.py  rag_code.py  requirements.txt  start.sh
examples/fastest-rag-stack/.distx_data/lmdb/: data.mdb  lock.mdb
lib/api/: Cargo.toml  build.rs
lib/api/proto/: distx.proto  qdrant.proto  vectx.proto
lib/api/src/: grpc.rs  lib.rs  rest.rs
lib/core/: Cargo.toml
lib/core/src/: background.rs  bm25.rs  collection.rs  error.rs  filter.rs  graph.rs  hnsw.rs  lib.rs  multivector.rs  point.rs  simd.rs  vector.rs
lib/schema/: Cargo.toml
lib/schema/src/: distance.rs  explain.rs  lib.rs  schema.rs
lib/similarity/: Cargo.toml
lib/similarity/src/: embedder.rs  lib.rs  rerank.rs
lib/storage/: Cargo.toml
lib/storage/src/: lib.rs  lmdb_storage.rs  manager.rs  persistence.rs  snapshot.rs  wal.rs
scripts/: benchmark.py  comparison_benchmark.py  comprehensive_benchmark.py  final_benchmark.py  full_comparison.py  protocol_comparison.py  publish_vectx.sh  publish_vectx_auto.sh  release.sh  run_similarity_demo.sh  sample_products.csv  similarity_demo.py  test_all.sh
scripts/proto_python/: vectordb_pb2.py  vectordb_pb2_grpc.py
src/: lib.rs  main.rs
tests/: integration_test.rs
tools/: sync-web-ui.sh
