[package]
name = "distx-api"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "REST and gRPC API for DistX vector database - Qdrant-compatible endpoints"
authors = ["antonellof"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antonellof/distx"
documentation = "https://docs.rs/distx-api"
keywords = ["vector-database", "rest-api", "grpc", "qdrant"]
categories = ["database", "web-programming"]

[dependencies]
distx-core = { version = "0.2.0", path = "../core" }
distx-storage = { version = "0.2.0", path = "../storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
actix-web = { version = "4.11", features = ["rustls-0_23"] }
actix-cors = "0.7"
actix-files = "0.6"
tonic = { version = "0.11", features = ["gzip"] }
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }

