[package]
name = "distx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
ahash = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
ordered-float = "5.0"
smallvec = "1.15"
rand = "0.9"

[dev-dependencies]
tempfile = "3.0"

