[package]
name = "distx-similarity"
version = "0.2.5"
edition = "2021"
rust-version = "1.75"
description = "Schema-driven similarity engine for tabular rows - part of DistX"
authors = ["antonellof"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antonellof/distx"
documentation = "https://docs.rs/distx-similarity"
readme = "../../README.md"
keywords = ["similarity", "tabular", "schema-driven", "embeddings", "reranking"]
categories = ["database", "data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ahash = "0.8"

# Internal dependencies
distx-core = { version = "0.2.5", path = "../core" }

[dev-dependencies]
tempfile = "3.0"
