[package]
name = "distx-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
distx-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
atomicwrites = "0.4"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
heed = "0.22"
nix = { version = "0.29", features = ["process"] }

[dev-dependencies]
tempfile = "3.0"

