[package]
name = "distx-storage"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Storage layer for DistX vector database - WAL, snapshots, LMDB persistence"
authors = ["antonellof"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antonellof/distx"
documentation = "https://docs.rs/distx-storage"
keywords = ["vector-database", "storage", "persistence", "wal", "lmdb"]
categories = ["database"]

[dependencies]
distx-core = { version = "0.2.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
atomicwrites = "0.4"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
heed = "0.22"
nix = { version = "0.29", features = ["process"] }

[dev-dependencies]
tempfile = "3.0"

